# wikifolio_universe_converter

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  format.sh  vcpkg.json
.devcontainer/: .p10k.zsh  Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-docs.yml  build.yml  cleanup-workflows.yml  cpp-quality.yml  github-release.yml
build-tools/: cpplint.sh  format.sh  setup-vcpkg.sh  tidy.sh
cmake/: Findxlsxio_read.cmake  SetupCompiler.cmake  SetupVcpkg.cmake  ShowBuildTargetProperties.cmake
cmake/presets/: base.json  ci.json  linux.json  windows.json
src/: download.cpp  download.h  main.cpp  main.h  version.cpp.in  version.h  version.h.in
